# ring-dataset-gen

./: .gitignore  EXAMPLE_COMMANDS.md  QUICKSTART.md  README.md  TESTING.md  config.json  environment.yml  pyproject.toml  setup_conda.sh  spec.md  test_config_only.py  test_render.sh  test_run.sh
blender/: ring_shader_pos1.blend  ring_shader_pos1.blend1
configs/: mvp.yaml
datasetgen/: annotations.py  camera_sampling.py  config.py  render_pipeline.py  scene_introspection.py  visibility_checks.py
src/: __init__.py  cli.py  io_utils.py  orchestrator.py  sampling.py  seeds.py
src/blender/: __init__.py  render_scene.py
tools/: generate_ring_dataset.py
